[package]
name = "ebpf-uprober"
version = "0.1.0"
edition = "2021"

[dependencies]
libbpf-rs = "0.24"
libbpf-sys = "1.2"
anyhow = "1.0"
signal-hook  = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2"

opentelemetry = { version = "0.28.0" }
opentelemetry_sdk = {version = "0.28.0"}
opentelemetry-stdout = {version = "0.28.0"}


[build-dependencies]
libbpf-cargo = "0.24"

[profile.release]
strip = true
lto = true